fix chrome css bug involving mouse scrollbars

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -22,7 +22,7 @@
 
 .nav-group {
   flex: 1;
-  overflow-y: auto;
+  overflow-y: overlay;
   overflow-x: hidden;
 }
 
